# akkurim-server

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: cron.py  initial_data.py  main.py
app/alembic/: env.py
app/alembic/versions/: 282b09fb739c_create_new_db.py  39e2194b2589_merge_training_time_into_group.py  6792015a95d7_add_deleted_at_field_to_tables.py  e0b6edaa9e6e_add_fks_and_indexes_to_fks.py  f10c5dc3a332_add_wind_pb_sb_and_points_to_athlete_.py  f6ae4f69a234_recreate_db.py
app/api/v1/: admin.py  (+1 more)
app/core/: config.py  observation_middleware.py  scraper.py
app/db/: database.py
app/models/: __init__.py  _base_model.py  athlete.py  athlete_guardian.py  athlete_meet_event.py  athlete_registration_meet_event.py  athlete_sign_up_form.py  category.py  club.py  discipline.py  discipline_type.py  file.py  group.py  group_athlete.py  group_trainer.py  guardian.py  helper.py  item.py  item_type.py  meet.py  meet_event.py  meet_trainer.py  payment.py  points.py  remote_config.py  request.py  request_file.py  response.py  school_year.py  sign_up_form.py  sign_up_form_group.py  trainer.py  training.py  training_athlete.py  training_time.py  training_trainer.py  web_post.py
app/schemas/: __init__.py  attendance.py  group.py  sse_event.py  training.py
app/scripts/: pre_start.sh
app/utils/: broadcast.py
data/: .~lock.prehled_clenu_09042025.xlsx#  list_of_categories.py  list_of_disciplines.py  transfer.py  transfer_categories.py  transfer_disciplines.py
tests/: test_utils.py
(+68 files in other folders)
