[project]
name = "akkurim-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "supertokens-python",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "pydantic[email]",
    "pytest",
    "sse-starlette",
    "broadcaster",
    "orjson",
    "uvloop; sys_platform != 'win32'",
    "httptools",
    "alembic>=1.14.0",
    "typing-inspect>=0.9.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
